--- a/src/pages/Home/welcomeslider.css
+++ b/src/pages/Home/welcomeslider.css
@@ -1,10 +1,3 @@
-/* html,
-body {
-    position: relative;
-    height: 100%;
-    background: #000;
-} */
-
 .swiper {
     width: 100%;
     height: 100%;
@@ -48,6 +41,7 @@ body {
     /* min-height: 80%; */
     max-height: 80%;
     width: 100%;
+    background-color: #000;
 }
 
 .mySwiper {
