partially offering page

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -29,7 +29,8 @@
 
 .header-menu-container .menu-bar {
     position: relative;
-    background: #000;
+    background: #090909;
+    padding: 10px 3vw;
 }
 
 .header-menu-container .menu-bar a,
