--- a/src/pages/CaseStudies/fixedslider.css
+++ b/src/pages/CaseStudies/fixedslider.css
@@ -1,10 +1,12 @@
 #fixed-slider-case-studies .elem {
     position: relative;
-    height: 100px;
+    height: auto;
+    max-height: 100px;
     width: 100%;
+
     display: flex;
     align-items: center;
-    padding: 0 2vw;
+    padding: 5% 2% 3% 2%;
     /* border-top: 1px solid #000; */
     /* border-bottom: 1px solid #38383864; */
     border-bottom: 1px solid #495057;
