--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -27,7 +27,7 @@
 
 .header-menu-container .menu-bar {
   position: relative;
-  background: #090909;
+  background: white;
   padding: 10px 3vw;
   height: 100%;
   display: flex;
