--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,18 +27,25 @@ a {
 body {
   font-family: 'Roboto Condensed', sans-serif;
   line-height: 1;
-  background: #000;
+  /* background: #000; */
 }
 
 ::-webkit-scrollbar {
   display: none;
 }
 
-.heading-highlight {
+/* .heading-highlight {
   background: linear-gradient(90deg, #f9572a, #ff8a05);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+} */
+
+.heading-highlight {
+  background: #07b2ff;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; 
 }
 
 .container {
