--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Roboto+Condensed&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Courgette&family=Roboto+Condensed&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 
 * {
   margin: 0;
@@ -25,7 +24,7 @@ a {
 }
 
 body {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   line-height: 1;
   /* background: #000; */
 }
@@ -45,7 +44,7 @@ body {
   background: #07b2ff;
   background-clip: text;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; 
+  -webkit-text-fill-color: transparent;
 }
 
 .container {
@@ -76,7 +75,7 @@ body {
   margin-bottom: -0.5em;
   color: var(--primary);
   text-transform: uppercase;
-  font-family: 'Courgette', cursive;
+  font-family: "Courgette", cursive;
 }
 
 .main_text {
@@ -130,11 +129,11 @@ body {
 
 .counter .count {
   flex-direction: column;
-  margin: .5rem;
+  margin: 0.5rem;
   color: var(--dark);
   background: var(--off-white);
   width: 90px;
-  border-radius: .35rem;
+  border-radius: 0.35rem;
   padding: 1rem;
 }
 
@@ -145,7 +144,7 @@ body {
 }
 
 .counter .count span {
-  opacity: .80;
+  opacity: 0.8;
   font-weight: 500;
   letter-spacing: -1px;
   text-transform: uppercase;
@@ -154,13 +153,38 @@ body {
 /*Socials*/
 .socials a {
   margin: 0 0.75rem;
-  opacity: .7;
+  opacity: 0.7;
   color: var(--dark);
   font-size: 1.15rem;
-  transition: .3s ease;
+  transition: 0.3s ease;
 }
 
 .socials a:hover {
   opacity: 1;
   color: var(--primary);
+}
+
+/* Navbar Strike Through Links */
+.strike-animation {
+  position: relative;
+}
+
+.strike-animation:hover::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  height: 5px;
+  background-color: #07b2ff;
+  animation: strike 0.15s linear forwards;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes strike {
+  from {
+    width: 0;
+  }
+  to {
+    width: 200%;
+  }
 }
