--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -34,7 +34,7 @@
   justify-content: space-between;
   align-items: center;
   z-index: 3;
-  padding: 2em;
+  padding: 2em 1em;
 }
 
 .header-menu-container .menu-bar a,
